--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,4 +14,9 @@
             android:layout_height="wrap_content"
             android:text="clickme"
             android:id="@+id/btn_login"/>
+
+    <Button android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="fragment"
+            android:id="@+id/btn_fragment"/>
 </LinearLayout>
