--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,4 +19,9 @@
             android:layout_height="wrap_content"
             android:text="fragment"
             android:id="@+id/btn_fragment"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container"/>
 </LinearLayout>
